# cookiecutter-pypackage

./: CONTRIBUTING.rst  cookiecutter.json  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: dev.yml  publish.yml
docs/: tutorial.md
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/overrides/partials/: comments.html
