[tool.poetry]
name = "cookiecutter-pypackage"
version = "1.1.1"
description = "Cookiecutter template for a Python package"
license = "BSD-3-Clause"
authors = ["Xie Wei <ampedee@gmail.com>"]
readme = "README.md"
repository = "https://github.com/waynerv/cookiecutter-pypackage"
documentation = "https://waynerv.github.io/cookiecutter-pypackage/"
keywords = ['cookiecutter', 'template', 'package']

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.8.*"
cookiecutter = "1.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.3"
pytest-cookies = "^0.6.1"
pyyaml = "^5.3.1"
mkdocs = "^1.1.2"
mkdocs-material = "^6.1.7"
mkdocs-material-extensions = "^1.0.1"
pytest-cov = "^2.10.1"
tox = "^3.20.1"
mkdocs-include-markdown-plugin = "^2.8.0"
click = "^8.0.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
